# wrapt

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES  Justfile  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  RELEASE.rst  TESTING.md  appveyor.yml  pyproject.toml  pytest.ini  readme.md  run-tox.sh  setup.cfg  setup.py  tddium.yml  tox.ini
.devcontainer/: devcontainer.json  install.sh
.github/: FUNDING.yml
.github/workflows/: build-test-release.yml  main.yml  package.yml  test.yml
blog/: 01-how-you-implemented-your-python-decorator-is-wrong.md  02-the-interaction-between-decorators-and-descriptors.md  03-implementing-a-factory-for-creating-decorators.md  04-implementing-a-universal-decorator.md  05-decorators-which-accept-arguments.md  06-maintaining-decorator-state-using-a-class.md  07-the-missing-synchronized-decorator.md  08-the-synchronized-decorator-as-context-manager.md  09-performance-overhead-of-using-decorators.md  10-performance-overhead-when-applying-decorators-to-methods.md  11-safely-applying-monkey-patches-in-python.md  12-using-wrapt-to-support-testing-of-software.md  13-ordering-issues-when-monkey-patching-in-python.md  14-automatic-patching-of-python-applications.md  README.md
docs/: Makefile  api.rst  benchmarks.py  benchmarks.rst  benchmarks.sh  bundled.rst  changes.rst  conf.py  decorators.rst  examples.rst  index.rst  issues.rst  known-issues.rst  monkey.rst  proxies.rst  quick-start.rst  testing.rst  typing.rst  unit-testing.rst  wrappers.rst
examples/: call_tracker.py  dill_decorator.py  dill_proxy.py  pickling_proxy.py  type_checker.py
src/: __init__.py  _wrappers.c  decorators.py  exceptions.py  importer.py  wrappers.py
src/wrapt/: __init__.py  __init__.pyi  __wrapt__.py  _wrappers.c  arguments.py  caching.py  decorators.py  importer.py  patches.py  proxies.py  synchronization.py  weakrefs.py  wrappers.py  wrapt.pyi
src/wrapt-stubs/: __init__.pyi
tests/: compat.py  conftest.py  module2.py  mypy_function_wrapper.out  mypy_function_wrapper.py  mypy_function_wrapper_cls_t1.py  mypy_function_wrapper_cls_t2.py  mypy_function_wrapper_cls_t3.out  mypy_function_wrapper_cls_t3.py  mypy_function_wrapper_cls_t4.out  mypy_function_wrapper_cls_t4.py  mypy_function_wrapper_cls_t5.out  mypy_function_wrapper_cls_t5.py  mypy_function_wrapper_cls_t6.out  mypy_function_wrapper_cls_t6.py  mypy_function_wrapper_cls_t7.out  mypy_function_wrapper_cls_t7.py  mypy_function_wrapper_fn_t1.py  mypy_function_wrapper_fn_t2.out  mypy_function_wrapper_fn_t2.py  mypy_function_wrapper_fn_t3.out  mypy_function_wrapper_fn_t4.out  mypy_function_wrapper_fn_t5.out  mypy_function_wrapper_fn_t6.out  mypy_function_wrapper_fn_t6.py  mypy_function_wrapper_t1.py  mypy_function_wrapper_t3.out  mypy_function_wrapper_t3.py  mypy_function_wrapper_t4.out  mypy_function_wrapper_t4.py  mypy_function_wrapper_t5.out  mypy_function_wrapper_t5.py  mypy_function_wrapper_t6.out  mypy_function_wrapper_t7.out  mypy_function_wrapper_t7.py  run.sh  stubtest_allowlist.txt  test_adapter.py  test_adapter_py3.py  test_adapter_py33.py  (+31 more)
tests/core/: compat.py  test_adapter.py  test_adapter_py3.py  test_adapter_py33.py  test_annotations.py  test_attribute_wrapper.py  test_auto_object_proxy.py  test_callable_binding_no_args.py  test_callable_object_proxy.py  test_class.py  test_class_py37.py  test_copy.py  test_decorator_state.py  test_deferred_patching.py  test_descriptor_get_class_access.py  test_enabled_bool_error.py  test_formatargspec_py35.py  test_formatargspec_py38.py  test_function.py  test_function_wrapper.py  test_inheritance_py37.py  test_inner_classmethod.py  test_inner_staticmethod.py  test_inplace_operators.py  test_instancemethod.py  test_lazy_object_proxy.py  test_lru_cache.py  test_memoize.py  test_monkey_patching.py  test_nested_function.py  test_object_proxy.py  test_object_proxy_hook.py  test_object_proxy_self_dict.py  test_object_proxy_type_checks.py  test_outer_classmethod.py  test_outer_staticmethod.py  test_pickle.py  test_post_import_hooks.py  test_pyerr_clear_propagation.py  test_resolve_path.py  (+8 more)
tests/mypy/: mypy_auto_object_proxy_t1.py  mypy_decorator_t1.out  mypy_decorator_t1.py  mypy_function_wrapper_cls_t1.py  mypy_function_wrapper_cls_t2.py  mypy_function_wrapper_cls_t3.out  mypy_function_wrapper_cls_t4.out  mypy_function_wrapper_cls_t5.out  mypy_function_wrapper_cls_t6.out  mypy_function_wrapper_cls_t7.out  mypy_function_wrapper_cls_t7.py  mypy_function_wrapper_cls_t8.out  mypy_function_wrapper_cls_t8.py  mypy_function_wrapper_fn_t1.out  mypy_function_wrapper_fn_t1.py  mypy_function_wrapper_fn_t2.out  mypy_function_wrapper_fn_t2.py  mypy_function_wrapper_fn_t3.out  mypy_function_wrapper_fn_t3.py  mypy_function_wrapper_fn_t4.out  mypy_function_wrapper_fn_t4.py  mypy_function_wrapper_fn_t5.out  mypy_function_wrapper_fn_t5.py  mypy_function_wrapper_fn_t6.out  mypy_function_wrapper_fn_t6.py  mypy_function_wrapper_fn_t7.out  mypy_function_wrapper_fn_t7.py  mypy_object_proxy_arithmetic_t1.py  mypy_object_proxy_container_t1.py  mypy_object_proxy_context_t1.py  mypy_partial_callable_t1.out  mypy_partial_callable_t1.py  mypy_patch_function_wrapper_t1.out  mypy_patch_function_wrapper_t1.py  mypy_patching_primitives_t1.out  mypy_patching_primitives_t1.py  mypy_post_import_hooks_t1.out  mypy_post_import_hooks_t1.py  mypy_synchronized_lock_t1.out  mypy_synchronized_lock_t1.py  (+17 more)
wrapt/: __init__.py  decorators.py  exceptions.py  wrappers.py
wrapt/tests/: decorators.py  test_function.py  test_inner_classmethod.py  test_inner_staticmethod.py  test_instancemethod.py  test_nested_function.py  test_outer_classmethod.py  test_outer_staticmethod.py
