[build-system]
requires = ["setuptools>=38.3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrapt"
dynamic = ["version"]
description = "Module for decorators, wrappers and monkey patching."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Graham Dumpleton", email = "Graham.Dumpleton@gmail.com"}
]
requires-python = ">=3.8"
keywords = ["wrapper", "proxy", "decorator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/GrahamDumpleton/wrapt"
"Bug Tracker" = "https://github.com/GrahamDumpleton/wrapt/issues/"
Changelog = "https://wrapt.readthedocs.io/en/latest/changes.html"
Documentation = "https://wrapt.readthedocs.io/"

[project.optional-dependencies]
dev = [
    "pytest",
    "setuptools",
]

[tool.setuptools]
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "wrapt.__version__"}

# uv configuration
[tool.uv]
dev-dependencies = [
    "pytest",
    "setuptools",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v"]
norecursedirs = [".tox", ".venv", "venv", "build", "dist"]

# isort configuration (compatible with Black)
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["wrapt"]
