# --- Project configuration -------------------------------------------------

[metadata]
name = wrapt
version = attr: wrapt.__version__
readme = "RELEASE.rst"
author = Graham Dumpleton
author_email = Graham.Dumpleton@gmail.com
url = https://github.com/GrahamDumpleton/wrapt
description = Module for decorators, wrappers and monkey patching.
long_description = file: RELEASE.rst
long_description_content_type = text/x-rst
platform = any
keywords = wrapper, proxy, decorator
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Bug Tracker = https://github.com/GrahamDumpleton/wrapt/issues/
    Changelog = https://wrapt.readthedocs.io/en/latest/changes.html
    Documentation = https://wrapt.readthedocs.io/

[options]
zip_safe = false
python_requires = >= 3.9
packages = find:
package_dir =
    =src
test_suite = tests

[options.packages.find]
where=src

[bdist_wheel]
universal = false
